src/tests/ci/assignment_4_control_flow/valid/04_enum_switch_case_default.c
enum Color { RED, GREEN, BLUE };

int main() {
    enum Color c = GREEN;
    switch (c) {
        case RED:
            return 1;
        case GREEN:
            return 2;
        default:
            return 0;
    }
}