src/tests/ci/assignment_4_control_flow/invalid_semantic/04_switch_case_declaration.c
int main() {
    int x = 1;

    switch(x) {
        case 1:
            int y = 5;
            break;
    }

    return 0;
}